tests/snapshots/config_hierarchy_snapshots__snapshot_cli_explicit_path_override.snap
---
source: tests/config_hierarchy_snapshots.rs
expression: formatted
---
## Sources
  1. CliExplicit from cli-explicit.toml
     statement_count.threshold: 99
     volatility.alpha: 0.08
     general.verbose: true

## Merged Configuration
  statement_count.threshold: 99
  volatility.alpha: 0.08
  general.verbose: true
  volatility.normalize: false
  coupling.granularity: Some("crate")
