tests/snapshots/config_hierarchy_snapshots__snapshot_default_config_when_no_user_or_repo_config.snap
---
source: tests/config_hierarchy_snapshots.rs
expression: formatted
---
## Sources

## Merged Configuration
  statement_count.threshold: 10
  volatility.alpha: 0.01
  general.verbose: false
  volatility.normalize: false
  coupling.granularity: None
